--- a/.github/workflows/pre-merge-python.yml
+++ b/.github/workflows/pre-merge-python.yml
@@ -23,8 +23,7 @@ on:
 
 jobs:
   build-test:
-    runs-on:
-        group: Fastchecker
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         framework:
@@ -36,26 +35,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Define Image Tag
-        id: define_image_tag
-        run: |
-          echo "image_tag=dynamo:latest-${{ matrix.framework }}" >> $GITHUB_OUTPUT
-      - name: Build image
-        env:
-          GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
-        run: |
-          ./container/build.sh --tag ${{ steps.define_image_tag.outputs.image_tag }} --target ci_minimum --framework ${{ matrix.framework }}
       - name: Run pytest
         env:
           PYTEST_MARKS: "pre_merge or mypy"
-        run: |
-          docker run -w /workspace --name ${{ env.CONTAINER_ID }} ${{ steps.define_image_tag.outputs.image_tag }} pytest --basetemp=/tmp --junitxml=${{ env.PYTEST_XML_FILE }} -m "${{ env.PYTEST_MARKS }}"
-      - name: Copy test report from test Container
+      - run: |
+            pip install -r container/deps/requirements.test.txt
+            pytest -v --md-report --md-report-flavor gfm --md-report-exclude-outcomes passed skipped xpassed --md-report-output ${{ env.PYTEST_MD_FILE }} --junitxml=${{ env.PYTEST_XML_FILE }} success_test.py
+      - run: ls -al     
         if: always()
-        run: |
-          docker cp ${{ env.CONTAINER_ID }}:/workspace/${{ env.PYTEST_XML_FILE }} .
       - name: Archive test report
         uses: actions/upload-artifact@v4
         if: always()
@@ -64,14 +51,3 @@ jobs:
           if-no-files-found: error
           path: |
             ${{ env.PYTEST_XML_FILE }}
-
-  event_file:
-    name: "Event File"
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' }}
-    steps:
-      - name: Upload
-        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
-        with:
-          name: Event File
-          path: ${{ github.event_path }}
