--- a/container/Dockerfile.vllm
+++ b/container/Dockerfile.vllm
@@ -6,7 +6,7 @@ ARG BASE_IMAGE_TAG="25.01-cuda12.8-devel-ubuntu24.04"
 
 ARG RUNTIME_IMAGE="nvcr.io/nvidia/cuda"
 ARG RUNTIME_IMAGE_TAG="12.8.1-runtime-ubuntu24.04"
-
+#REMOVE THIS COMMENT
 ARG GENAI_PERF_TAG="25d0188713adc47868d6b3f22426375237a90529"
 
 FROM ${BASE_IMAGE}:${BASE_IMAGE_TAG} AS nixl_base
