--- a/.github/workflows/test_report.yaml
+++ b/.github/workflows/test_report.yaml
@@ -87,7 +87,7 @@ jobs:
           echo "Total duration: $total_duration"
           echo "|------------|-------|--------|--------|---------|----------|" >> $GITHUB_STEP_SUMMARY
           echo "| **Total** | $total_tests | $total_passed | $total_failed | $total_skipped | ${total_duration}s |" >> $GITHUB_STEP_SUMMARY
-      
+
       - name: Report test status - In Progress
         id: report_test_status
         uses: actions/github-script@v7
@@ -95,7 +95,7 @@ jobs:
           script: |
             const fs = require('fs');
             const path = require('path');
-            const summaryContent = fs.readFileSync(path.join(process.env.GITHUB_WORKSPACE, process.env.GITHUB_STEP_SUMMARY), 'utf-8');
+            const summaryContent = fs.readFileSync('${{ github.workspace }}/${{ github.step_summary }}', 'utf-8');
             const check_run = await github.rest.checks.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
