--- a/.github/workflows/test_report.yaml
+++ b/.github/workflows/test_report.yaml
@@ -52,17 +52,15 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y libxml2-utils
-          summary="## Unit Test Results Summary\n"
-          summary+="# This test report is a summary of the test run in workflow run: [${{ steps.set_test_run_url.outputs.test_run_url }}](${{ steps.set_test_run_url.outputs.test_run_url }})\n"
-          summary+="| Test Suite | Tests | Passed | Failed | Skipped | Duration |\n"
-          summary+="|------------|-------|--------|--------|---------|----------|\n"
-          
+          echo "## Unit Test Results Summary" >> $GITHUB_STEP_SUMMARY
+          echo "# This test report is a summary of the test run in workflow run: [${{ steps.set_test_run_url.outputs.test_run_url }}](${{ steps.set_test_run_url.outputs.test_run_url }})" >> $GITHUB_STEP_SUMMARY
+          echo "| Test Suite | Tests | Passed | Failed | Skipped | Duration |" >> $GITHUB_STEP_SUMMARY
+          echo "|------------|-------|--------|--------|---------|----------|" >> $GITHUB_STEP_SUMMARY
           total_tests=0
           total_passed=0
           total_failed=0
           total_skipped=0
           total_duration=0
-  
           for file in artifacts/**/*.xml; do
             if [ -f "$file" ]; then
               suite_name=$(basename "$(dirname "$file")")
@@ -71,8 +69,10 @@ jobs:
               failed=$(xmllint --xpath "count(//testcase[failure or error])" "$file")
               skipped=$(xmllint --xpath "count(//testcase[skipped])" "$file")
               duration=$(xmllint --xpath "sum(//testcase/@time)" "$file")
-              # Append the result for the current test suite
-              summary+="| $suite_name | $tests | $passed | $failed | $skipped | ${duration}s |\n"
+              # Debugging: Output values for each file
+              echo "Processing file: $file"
+              echo "Suite: $suite_name, Tests: $tests, Passed: $passed, Failed: $failed, Skipped: $skipped, Duration: $duration"
+              echo "| $suite_name | $tests | $passed | $failed | $skipped | ${duration}s |" >> $GITHUB_STEP_SUMMARY
               total_tests=$((total_tests + tests))
               total_passed=$((total_passed + passed))
               total_failed=$((total_failed + failed))
@@ -80,19 +80,22 @@ jobs:
               total_duration=$(echo "$total_duration + $duration" | bc)
             fi
           done
-  
-          summary+="|------------|-------|--------|--------|---------|----------|\n"
-          summary+="| **Total** | $total_tests | $total_passed | $total_failed | $total_skipped | ${total_duration}s |\n"
-  
-          # Output the summary to GITHUB_OUTPUT
-          echo "summary=$summary" >> $GITHUB_OUTPUT
+          echo "Total tests: $total_tests"
+          echo "Total passed: $total_passed"
+          echo "Total failed: $total_failed"
+          echo "Total skipped: $total_skipped"
+          echo "Total duration: $total_duration"
+          echo "|------------|-------|--------|--------|---------|----------|" >> $GITHUB_STEP_SUMMARY
+          echo "| **Total** | $total_tests | $total_passed | $total_failed | $total_skipped | ${total_duration}s |" >> $GITHUB_STEP_SUMMARY
 
       - name: Report test status - In Progress
         id: report_test_status
         uses: actions/github-script@v7
         with:
           script: |
-            const summaryContent = "${{ steps.summarize_test_results.outputs.summary }}";
+            const fs = require('fs');
+            const path = require('path');
+            const summaryContent = fs.readFileSync('${{ github.workspace }}/${{ github.step_summary }}', 'utf-8');
             const check_run = await github.rest.checks.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
