--- a/.github/workflows/test_report.yaml
+++ b/.github/workflows/test_report.yaml
@@ -88,24 +88,23 @@ jobs:
           echo "|------------|-------|--------|--------|---------|----------|" >> $GITHUB_STEP_SUMMARY
           echo "| **Total** | $total_tests | $total_passed | $total_failed | $total_skipped | ${total_duration}s |" >> $GITHUB_STEP_SUMMARY
 
-      - name: Report test status - In Progress
-        id: report_test_status
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            const path = require('path');
-            const summaryContent = fs.readFileSync('${{ github.workspace }}/${{ github.step_summary }}', 'utf-8');
-            const check_run = await github.rest.checks.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: "Summarize test report",
-              head_sha: "${{ github.event.workflow_run.head_commit.id }}",
-              status: "completed",
-              conclusion: "${{ job.status }}",
-              output: {
-                title: "Test Summary",
-                summary: summaryContent
-              }
-            });
-            return check_run.data.id;
+      - name: Complete report test status
+        if: always()
+        id: update_check_status
+        run: |
+           echo "Updating the final test report status in check run summary."
+           echo "Final status report is now available."
+           curl -X PATCH \
+             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+             -d @- \
+             https://api.github.com/repos/${{ github.repository }}/check-runs/${{ github.event.workflow_run.check_run.id }} \
+             <<EOF
+           {
+             "status": "completed",
+             "conclusion": "${{ job.status }}",
+             "output": {
+               "title": "Test Results Summary",
+               "summary": "$(cat $GITHUB_STEP_SUMMARY)"
+             }
+           }
+           EOF
