--- a/.github/workflows/test_report.yaml
+++ b/.github/workflows/test_report.yaml
@@ -44,25 +44,6 @@ jobs:
            run_id: ${{ github.event.workflow_run.id }}
            path: artifacts
 
-      - name: Report test status - In Progress
-        id: report_test_status
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const check_run = await github.rest.checks.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: "Summarize test report",
-              head_sha: "${{ github.event.workflow_run.head_commit.id }}",
-              status: "in_progress",
-              conclusion: "neutral",
-              output: {
-                title: "Test Summary",
-                summary: "Test report is currently being processed."
-              }
-            });
-            return check_run.data.id;
-
       - name: Set Test Run URL
         id: set_test_run_url
         run: echo "test_run_url=${{ github.event.workflow_run.html_url }}" >> $GITHUB_OUTPUT
@@ -117,33 +98,20 @@ jobs:
 
       - name: Complete report test status
         if: always()
-        id: update_parent_workflow_status
-        run: |
-          # Path to the summary file (from the previous step output)
-          summary_file="${{ steps.summarize_test_results.outputs.summary_file }}"
-          echo "Contents of the summary file:"
-          cat "$summary_file"
-
-          # Get the parent workflow ID from the current workflow_run context
-          parent_workflow_run_id="${{ github.event.workflow_run.id }}"
-
-          # Log the parent workflow run ID for debugging
-          echo "Updating parent workflow run ID: $parent_workflow_run_id"
-
-          # Update the parent workflow run with the summary content
-          echo "Updating the parent workflow run with the test report summary."
-
-          curl -X PATCH \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -d @- \
-            https://api.github.com/repos/${{ github.repository }}/actions/runs/$parent_workflow_run_id \
-            <<EOF
-          {
-            "status": "completed",
-            "conclusion": "${{ job.status }}",
-            "output": {
-              "title": "Test Results Summary",
-              "summary": "$(cat "$summary_file" | sed 's/"/\\"/g' | sed 's/\n/\\n/g')"
-            }
-          }
-          EOF
+        id: report_test_status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const check_run = await github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: "Summarize test report",
+              head_sha: "${{ github.event.workflow_run.head_commit.id }}",
+              status: "completed",
+              conclusion: "${{ job.status }}",
+              output: {
+                title: "Test Summary",
+                summary: "$(cat "${{ steps.summarize_test_results.outputs.summary_file }}" | sed 's/"/\\"/g' | sed 's/\n/\\n/g')"
+              }
+            });
+            return check_run.data.id;
